--- a/index.html
+++ b/index.html
@@ -11,27 +11,35 @@
     <div class="container">
       <h1>What character are you?</h1>
       <form id="character">
-        <label for="q1">How do you pick up chicks</label>
+        <label for="q1">How do you pick up chicks?</label>
         <select class="form-control" id="q1">
+          <option value="0"></option>
           <option value="1">I stalk her where she works</option>
           <option value="2">With my arms</option>
           <option value="3">I D.E.N.N.I.S. her</option>
         </select>
         <label for="q2">What's your favorite food?</label>
         <select class="form-control" id="q2">
+          <option value="0"></option>
           <option value="1">Bag of Spaghetti</option>
           <option value="2">Chimichanga</option>
           <option value="3">Whatever gets her back to my place</option>
         </select>
-        <label for="q3">What is your favorite thing to hunt</label>
+        <label for="q3">What is your favorite thing to hunt?</label>
         <select class="form-control" id="q3">
+          <option value="0"></option>
           <option value="1">Rats</option>
           <option value="2">Threats</option>
           <option value="3">Humans</option>
-        </select>
-        <button type="submit" class="btn">Go!</button>
+        </select><br>
+        <button type="submit" class="btn btn-success">Go!</button>
       </form>
       <div id="output">
-
+        <p class="charlie">You're Charlie!</p>
+        <img class="charlie" src="img/charlie.gif">
+        <p class="mac">You're Mac!</p>
+        <img class="mac" src="img/mac.gif">
+        <p class="dennis">You're Dennis!</p>
+        <img class="dennis" src="img/dennis.gif">
       </div>
 </html>
